--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,27 +1,36 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  background: url('/assets/images/login_bg.jpg') no-repeat center;
-  background-size: cover;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background: url('/bigEvent/assets/images/login_bg.jpg') no-repeat center;
+    background-size: cover;
 }
 
 .loginAndRegBox {
-  width: 400px;
-  height: 310px;
-  background-color: #fff;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+    width: 400px;
+    height: 310px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .title-box {
-  height: 60px;
-  background: url('/assets/images/login_title.png') no-repeat center;
+    height: 60px;
+    background: url('/bigEvent/assets/images/login_title.png') no-repeat center;
 }
+
+.reg-box {
+    display: none;
+}
+
+
+/* 
+
+
 
 .reg-box {
   display: none;
@@ -53,3 +62,5 @@ body {
 .layui-input {
   padding-left: 32px;
 }
+
+*/
