主页第一次

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,19 @@
 .layui-footer {
-  text-align: center;
-  font-size: 12px;
+    text-align: center;
+    font-size: 12px;
 }
 
 .iconfont {
-  margin-right: 8px;
+    margin-right: 8px;
 }
 
+.layui-icon {
+    margin-left: 20px;
+    margin-right: 8px;
+}
+
+
+/* 
 .layui-icon {
   margin-right: 8px;
   margin-left: 20px;
@@ -60,3 +67,5 @@ a {
 .layui-nav-item a {
   font-size: 12px;
 }
+
+*/
